finish basics: weather and soil and tools

--- a/Gardenguru/basics/tools.html
+++ b/Gardenguru/basics/tools.html
@@ -153,6 +153,58 @@
             </div>
           </div>
         </div>
+
+        <div class="toolContainer">
+          <div class="imgItem">
+            <img class="imgResp" src="basicsImages/gloves.png" alt="">
+          </div>
+          <div class="textItem">
+            <div class="titleTool">Gloves</div>
+            <div class="descriptionTool">
+                <ul class="listSquare">
+                    <li>Gloves should be durable but not too bulky, especially for working with seeds or transplanting seedlings.</li>
+                    <li>Fit is important, as poorly fitting gloves can cause blisters or result in accidents from slipping off.</li>
+                    <li>Fabrics that are water resistant, but also breathable, will help keep hands cool and comfortable.</li>
+                    <li>Longer cuffs protect wrists and forearms from scratches and keep soil from getting in.</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+
+        <div class="toolContainer">
+          <div class="imgItem">
+            <img class="imgResp" src="basicsImages/loopers.png" alt="">
+          </div>
+          <div class="textItem">
+            <div class="titleTool">Loopers</div>
+            <div class="descriptionTool">
+                <ul class="listSquare">
+                    <li>Bypass loppers are more precise in cut location than anvil style.</li>
+                    <li>Longer handled loppers can be heavy. Know what you'll be cutting and how far you'll need to reach and get the appropriate length.</li>
+                    <li>Lightweight aluminum or carbon-composite handles can be lighter.</li>
+                    <li>Like pruners, keep lopper blades in good condition and sharpen regularly.</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+        
+        <div class="toolContainer">
+          <div class="imgItem">
+            <img class="imgResp" src="basicsImages/hoe.png" alt="">
+          </div>
+          <div class="textItem">
+            <div class="titleTool">Hoe</div>
+            <div class="descriptionTool">
+                <ul class="listSquare">
+                    <li>A veggie garden may require a sturdy, wide hoe. If you have perennial gardens, a more delicate touch and a thinner hoe may be required. </li>
+                    <li>A veggie garden may require a sturdy, wide hoe. If you have perennial gardens, a more delicate touch and a thinner hoe may be required. </li>
+                    <li>Look for a comfortable handle with a long reach.
+                      A sharp blade works better and is easier to use.  </li>
+                    <li>Weeding hoes, also called hula or stirrup hoes, have an open square head and are pushed back and forth just under the soil surface to cut down top growth.</li>
+              </ul>
+            </div>
+          </div>
+        </div>
     </div>
 
   
