--- a/Gardenguru/basics/weather.html
+++ b/Gardenguru/basics/weather.html
@@ -92,13 +92,13 @@
 
     <div class="toolsMainContainer">
       <div class="toolsTitle intro-fade-in tools-from-top">
-        The importance of soil in gardening
+        The importance of weather in gardening
       </div>
       <div class="toolsSubtitle intro-fade-in water-from-top">
-        - soil -
+        - weather -
       </div>
       <div class="toolsImgMain intro-fade-in waterimage-from-top">
-        <img src="basicsImages/soilMain.jpg" class="imgMainRadius" alt="">
+        <img src="basicsImages/weatherMain.jpg" class="imgMainRadius" alt="">
       </div>
 
       <div class="toolPadding">
@@ -108,22 +108,24 @@
       <div class="basicsSplit">
         <div class="descriptionItem basicsItem slide-in description-from-left">
           <div class="aboutTitle">Gardenguru</div>
-          <div class="descriptionTitle">Facts about soil</div>
+          <div class="descriptionTitle">Weather's effects in garden </div>
           <ul class="waterListSquare">
-            <li>Soil is a complex blend of organic matter, minerals, water, air, and microorganisms.</li>
-            <li>Many of today's antibiotics have been derived from soil - eg. penicillin.</li>
-            <li>Soil is made up - clay, sand and loam. They are grouped according to the amounts of coarse sand and fine clay particles and organic matter they contain.</li>
-            <li>A teaspoon of healthy soil can contain up to a billion bacteria.</li>
+            <li>Weather is the ultimate factor for plants to thrive or perish.</li>
+            <li>Temperature, moisture and their extremes have a direct effect on the survival of plants.</li>
+            <li>Climate is the main reason plants favor certain places to grow. Climate is the behavior of the weather which can be described by both average values and extremes over a period of time</li>
+            <li> Knowing the local climate is a key factor to successful gardening. </li>
         </ul>
         </div>
         <div class="descriptionItem basicsItem slide-in description-from-left">
           <div class="aboutTitle">Gardenguru</div>
-          <div class="descriptionTitle">Facts about soil</div>
+          <div class="descriptionTitle">Tips related to weather</div>
           <ul class="waterListSquare">
-            <li>Soil rich in organic matter can store up to 30% of its weight in water.</li>
-            <li>A study revealed daily gardening can reduce the risk of dementia by 36%.</li>
-            <li>Soil contains 25% of our planet's biodiversity.</li>
-            <li>There are around 6000 species of earthworms in the world.</li>
+            <li>Plant Seeds Before It Rains</li>
+            <li>Do the Weeding After It Rains</li>
+            <li>Transplant on Cloudy Days</li>
+            <li>Wait for Dry Weather to Till</li>
+            <li>Pay Attention to Temperatures </li>
+            <li>The most important factor in gardening is temperature.</li>
           </ul>
         </div>
       </div>
@@ -133,33 +135,33 @@
       </div>
 
       <div class="toolsSubtitleTitle">
-        Soil in gardening
+        Weather in gardening
       </div>
 
       <div class="infoSubject">
         <p class="pinfoMain">
-          Gardening does not start with a seed in the ground. It starts with the soil. You can't have healthy, productive plants without rich, soft soil that allows the roots to grow deep enough to soak up nutrients
+            Good gardening weather can be different from what you'd expect. Find out when the conditions are favorable to tackle your chores.
         </p>  
         <p class="pinfoMain">
-          The good news? You can improve your soil with compost and organic matter. Rich soil literally has a life of its own with micro-organism activity (such as earthworms) that break down matter to release essential nutrients that plants need. Soil enriched with organic matter holds onto nutrients and moisture but drains well, loosens soil to create more oxygen for plants, and stablizes and anchors plant roots.
+            Most of us would agree — the best weather features balmy temperatures somewhere in the 70s and plenty of sunshine. But is that the best weather to go out and work on your gardens? Maybe, but then again, maybe not. Let's take a look at some of the best kinds of gardening weather for different gardening tasks.
         </p>
         <p class="pinfoMain">
-          There are three types of rock particles: large (sand), medium (silt), and small (clay). Usually, soil is a mix of these particles.  
+            The best time to get seeds in the ground is when the soil is relatively dry, but right before a good soaking rain. Dry soil is easier to work with than wet soil and seeds are less likely to rot in soil that doesn't stay soggy for prolonged periods. Add in a nice rain shower, and you won't need to drag out the garden hose to water your newly planted seeds. Just make sure that there are no severe rains forecasted any time soon. Light soaking rains are ideal, but pounding rain can very easily wash seeds right out of freshly tilled soil. 
         </p>
         <p class="pinfoMain">
-           Whereas soil type was about particle size, soil pH is about nutrition and soil fertility. Soil pH affects plants' growth because it affects the availability of nutrients and minerals in the soil, as well as how well a plant can access, absorb, and regulate these materials. A very high or very low soil pH will result in nutrient deficiency or toxicity, leading to poor plant growth.
+            No one wants to kneel in mud puddles to clear weeds out of their gardens, but if you have a choice, then the best time to get the weeding done is a few hours after a good soaking rain. The moisture loosens the soil, making it easier for you to pull weeds out by the root. 
           </p>
         <p class="pinfoMain"> 
-          To quickly review, plants' primary nutrients are nitrogen (N), phosphorus (P), and potassium (K). On the package of a fertilizer, you'll see these three values separated by dashes (N-P-K); the numbers of each nutrient indicate the percentage of net weight contained.
+            Whether you're planting veggie starts or dividing perennials, try to do your transplanting on cloudy days. Once they're in the ground, many transplants will suffer from a condition known as transplant shock. In other words, the plants will wilt, and if left untended, will start to lose leaves and stems until the plant either dies completely or acclimates to its new environment.
         </p>
         <p class="pinfoMain">
-          It's a good idea in the spring (or fall) to send of a soil sample for testing. That way, you'll know if you need to add lime or sulfur to adjust pH.
+            For many places around the United States, spring means lots of showers, and that can make it difficult for you to get out and do the tilling, raking and digging that needs to be done. If you've ever tried to dig a hole in wet soil, then you know just how badly muddy earth can cake on your tools. That's why you should wait for a few days after a rainy spell to do your tilling.
         </p>
         <p class="pinfoMain">
-          Soil amendments are materials that are added to the soil in order to change it in some way. Often, they are used to improve the soil's texture, nutrient content, or pH level. Amendments can be divided into two main categories: organic and inorganic.
+            The work will be easier on both you and your tiller. In addition, dry soil is less prone to compacting, whereas tilling wet, muddy soil can actually cause more soil compaction than not tilling it at all.
         </p>
         <p class="pinfoMain">
-          Organic soil amendments include things like compost, aged manure, coconut coir, and wood ash.Inorganic soil amendments include things like sand, perlite, lime, and vermiculite. 
+            Regardless of whether it's raining, sunny or cloudy, the most important factor of all is temperature. For instance, crops like peas, lettuce, broccoli and cabbage all prefer cooler weather. In fact, in many cases, you can plant cool weather crops shortly after the ground thaws for the year.
         </p>
     </div>
 
@@ -168,34 +170,34 @@
       </div>
 
       <div class="boldSubtitle">
-        THERE ARE 3 MAIN TYPES OF SOIL:
+        THE KEY ELEMENT OF WEATHER FOR GARDENING
       </div>
 
       <div class="rolesContainer">
         <div class="rolesItem">
-          <div class="rolesTitle">Sand</div>
+          <div class="rolesTitle">Freeze</div>
           <p class="pinfoMain">
-            Sandy soil is made mostly of sand particles. Water soaks quickly down through this type of soil. If you squeeze sandy soil in your hand, it does not stick together well.
+            Freezing temperatures can kill a plant instantly. Selecting plants for your garden should start with making sure they will survive the winter.
           </p>
         </div>
         <div class="rolesItem">
-          <div class="rolesTitle">Loam </div>
+          <div class="rolesTitle">Heat </div>
           <p class="pinfoMain">
-            Loam has equal amounts of sand, silt, and clay particles. Water drains from this type of soil more slowly than from sandy soil. If you squeeze loamy soil in your hand, it sticks together fairly well.
+            Extreme heat stresses plants and can even result in their demise. Make sure to select plants that will be suitable for your zone.
           </p>
         </div>
         <div class="rolesItem">
-          <div class="rolesTitle">Clay</div>
+          <div class="rolesTitle">Wind</div>
           <p class="pinfoMain"> 
-            Clay soil is made mostly of clay particles. Water drains very slowly from this type of soil. If you squeeze clay soil, it sticks together very well.
+            Transpiration from the plants and evaporation from the soil causes significant moisture loss. Since wind enhances the evaporation and transpiration, on a hot day the wind will have a negative effect.
           </p>
         </div>
       </div>
 
       <div class="containerIndexCategories margin30">
-      <div class=" centerGrid"><img src="basicsImages/img1soil.jpg"  class="imgCategories" alt=""></div>
-      <div class=" centerGrid"><img src="basicsImages/img2soil.jpg"  class="imgCategories" alt=""></div>
-      <div class=" centerGrid"><img src="basicsImages/img3soil.jpg"  class="imgCategories" alt=""></div>
+      <div class=" centerGrid"><img src="basicsImages/img1weather.jpg"  class="imgCategories" alt=""></div>
+      <div class=" centerGrid"><img src="basicsImages/img2weather.jpg"  class="imgCategories" alt=""></div>
+      <div class=" centerGrid"><img src="basicsImages/img3weather.jpg"  class="imgCategories" alt=""></div>
       </div>
     </div>
 
