--- a/Gardenguru/index.html
+++ b/Gardenguru/index.html
@@ -199,7 +199,7 @@
     <div class="containerIndexCategories categories">
       <div class="itemIndexCategories">
         <p class="titleIndexCategory fade-in title-from-top">- Trees -</p>
-        <a href="" class="centerGrid">
+        <a href="trees/trees.html" class="centerGrid">
           <img class="imgCategories fade-in categories-from-bottom" src="images/treeCategory2.jpg" alt="tree">
         </a>
       </div>
