--- a/Gardenguru/exercise.html
+++ b/Gardenguru/exercise.html
@@ -101,7 +101,7 @@
             <div class="QSM_currentQuiz div_cell">
                 <p class="currentQuiz">Select a category then take a quiz</p>
             </div>
-            <div class="QSM_topSelection div_cell">
+            <div class="QSM_quizSelection div_cell">
                 <ul class="meniu_principal">
                     <li class="buton_tools">
                         <a href="#">
@@ -564,7 +564,6 @@
             </ul>
         </ul>
     </div>
-    <script type="text/javascript" src="top_selectionMenu.js"></script>
     <script type="text/javascript" src="exercise.js"></script>
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
 
