plants flowers+shrubes+succulents

--- a/Gardenguru/index.html
+++ b/Gardenguru/index.html
@@ -204,7 +204,7 @@
         </a>
       </div>
       <div class="itemIndexCategories">
-        <p class="titleIndexCategory fade-in title-from-top">- Flowers -</p>
+        <p class="titleIndexCategory fade-in title-from-top">- Plants -</p>
         <a href="" class="centerGrid">
           <img class="imgCategories fade-in categories-from-bottom" src="images/flowerCategory2.jpg" alt="flower">
         </a>
