--- a/Gardenguru/plants/plants.html
+++ b/Gardenguru/plants/plants.html
@@ -94,22 +94,28 @@
 
     <div class="mainContainerIndex">
         <div class="mainTitle">
-            Choose your trees wisely!
+            Choose your plants wisely!
         </div>
         <div class="mainSubtitle">
             Build your dream garden.
         </div>
-        <div class="containerIndexCategories2 categories">
+        <div class="containerIndexCategories3 categories">
+            <div class="itemIndexCategories">
+                <p class="titleIndexCategory">- Flowers -</p>
+                <a href="flowers.html" class="centerGrid">
+                  <img class="imgCategories " src="plantsImages/flowers.jpg" alt="flower">
+                </a>
+              </div>
           <div class="itemIndexCategories">
-            <p class="titleIndexCategory">- Fruit trees -</p>
-            <a href="fruitTrees.html" class="centerGrid">
-              <img class="imgCategories " src="treesImages/webGarden.jpg" alt="tree">
+            <p class="titleIndexCategory">- Shrubes -</p>
+            <a href="shrubes.html" class="centerGrid">
+              <img class="imgCategories " src="plantsImages/shrubes.jpeg" alt="tree">
             </a>
           </div>
           <div class="itemIndexCategories">
-            <p class="titleIndexCategory">- Common trees -</p>
-            <a href="commonTrees.html" class="centerGrid">
-              <img class="imgCategories " src="treesImages/commonTrees.jpg" alt="flower">
+            <p class="titleIndexCategory">- Succulents -</p>
+            <a href="succulents.html" class="centerGrid">
+              <img class="imgCategories " src="plantsImages/succulents.jpg" alt="flower">
             </a>
           </div>
         </div>
