--- a/Gardenguru/exercise.html
+++ b/Gardenguru/exercise.html
@@ -408,12 +408,15 @@
         </ul>
         <ul class="selectedQuiz_container">
             <ul class="selectedQuiz">
+                <ul class="select_aQuiz">
+                    Select a Quiz to begin
+                </ul>
                 <ul class="begin_quiz">
                     Start selected quiz
                 </ul>
                 <ul class="finalScore">
                     <div class="finalscore_message">
-                        You scored a total of 
+                        You scored a total of
                     </div>
                     <div class="scoreObtained">
                         00
@@ -443,7 +446,8 @@
                                     <p id="exercise1_number">Exercise 1: Fill in the blank with the correct word</p>
                                     <p id="exercise1_correctAnswer" class="correctAnswer">spade</p>
                                     <p id="exercise1_question">When you need to move a lot of loose soil or slice easily
-                                        through roots, a _____ is your tool of choice.</p>
+                                        through roots, a _____ is your tool of choice
+                                    </p>
                                     <div>
                                         <input type="text" id="exercise1_answer">
                                     </div>
@@ -479,10 +483,10 @@
                                         scatches while working?</p>
                                     <form name="question4" id="question4">
                                         <div>
-                                            <p><input type="radio" name="question4" value="trowel">1.Trowel</p>
-                                            <p><input type="radio" name="question4" value="loopers">2.Loopers</p>
-                                            <p><input type="radio" name="question4" value="gloves">3.Gloves</p>
-                                            <p><input type="radio" name="question4" value="spade">4.Spade</p>
+                                            <p><input type="radio" name="question4" value="firstAnswer"><label id="exercise4_radio1_label">1.Trowel</label></p>
+                                            <p><input type="radio" name="question4" value="secondAnswer"><label id="exercise4_radio2_label">1.Trowel</label></p>
+                                            <p><input type="radio" name="question4" value="thirdAnswer"><label id="exercise4_radio3_label">1.Trowel</label></p>
+                                            <p><input type="radio" name="question4" value="forthAnswer"><label id="exercise4_radio4_label">1.Trowel</label></p>
                                         </div>
                                     </form>
                                 </div>
@@ -493,19 +497,20 @@
                                     <p id="exercise5_correctAnswer" class="correctAnswer">gloves</p>
                                     <p id="exercise5_question">What tool can protect your wrist and forearms from
                                         scatches while working?</p>
-                                        <form name="question5" id="question5">
-                                            <div>
-                                                <p><input type="radio" name="question5" value="trowel">1.Trowel</p>
-                                                <p><input type="radio" name="question5" value="loopers">2.Loopers</p>
-                                                <p><input type="radio" name="question5" value="gloves">3.Gloves</p>
-                                                <p><input type="radio" name="question5" value="spade">4.Spade</p>
-                                            </div>
-                                        </form>
+                                    <form name="question5" id="question5">
+                                        <div>
+                                            <p><input type="radio" name="question5" value="firstAnswer"><label id="exercise5_radio1_label">1.Trowel</label></p>
+                                            <p><input type="radio" name="question5" value="secondAnswer"><label id="exercise5_radio2_label">1.Trowel</label></p>
+                                            <p><input type="radio" name="question5" value="thirdAnswer"><label id="exercise5_radio3_label">1.Trowel</label></p>
+                                            <p><input type="radio" name="question5" value="forthAnswer"><label id="exercise5_radio4_label">1.Trowel</label></p>
+                                        </div>
+                                    </form>
                                 </div>
                             </div>
                             <div class="slide">
                                 <div class="exerciseSpace">
-                                    <p id="exercise6_number">Exercise 6: Match each element from the left with the corresponding element on the right</p>
+                                    <p id="exercise6_number">Exercise 6: Match each element from the left with the
+                                        corresponding element on the right</p>
                                     <div class="exercise6_container">
                                         <div>
                                             <ul class="draggable-list">
@@ -519,8 +524,8 @@
                                         <div>
                                             <ul class="draggable-list">
                                                 <li id="b4" draggable="true">
-                                                    <img src="C:\Users\Ardeleanu Gabriel\Desktop\loopers.png"
-                                                        style="width:50px" >
+                                                    <img src="basics/basicsImages/loopers.png"
+                                                        style="width:50px">
                                                 </li>
                                                 <li id="b5" draggable="true">
                                                     <img src="C:\Users\Ardeleanu Gabriel\Desktop\hoe.png"
