--- a/Gardenguru/top.html
+++ b/Gardenguru/top.html
@@ -73,8 +73,8 @@
       <li class="headeritem">study
         <ul class="headerdropdown">
           <li>learn</li>
-          <li>exercise</li>
-          <li>top</li>
+          <a href="exercise.html"><li>exercise</li></a>
+          <a href="top.html"><li>top</li></a>
         </ul>
       </li>
       <li class="headeritem">account
