--- a/Gardenguru/about.html
+++ b/Gardenguru/about.html
@@ -76,9 +76,9 @@
         </li>
         <li class="headeritem">study
           <ul class="headerdropdown">
-            <li>learn</li>
-            <li>exercise</li>
-            <li>top</li>
+            <a href="index.html#learnContainer"><li>learn</li></a>
+            <a href="exercise.html"><li>exercise</li></a>
+            <a href="top.html"><li>top</li></a>
           </ul>
         </li>
         <li class="headeritem">account
