--- a/Gardenguru/index.html
+++ b/Gardenguru/index.html
@@ -76,7 +76,7 @@
         </li>
         <li class="headeritem">study
           <ul class="headerdropdown">
-            <li>learn</li>
+            <a href="#learnContainer" onclick="onLinkClick()"><li>learn</li></a>
             <a href="exercise.html"><li>exercise</li></a>
             <a href="top.html"><li>top</li></a>
           </ul>
@@ -122,7 +122,7 @@
   </div>
 
 
-  <div class="mainContainerIndex">
+  <div class="mainContainerIndex" id="learnContainer">
     <div class="mainTitleIndex fade-in title-from-top">
       START WITH THE BASICS FIRST!
     </div>
@@ -130,7 +130,7 @@
 
     <div class="itemIndexBasics slide-in basics-from-left">
        <div class="item1IndexBasics">
-          <a href=""><img class="imgBasics" src="images/gardeningtools.png" alt="tools"></a>
+          <a href="basics/tools.html"><img class="imgBasics" src="images/gardeningtools.png" alt="tools"></a>
        </div>
        <div class="item2IndexBasics">
         <div class="titleIndexBasics">
@@ -146,7 +146,7 @@
 
     <div class="itemIndexBasics slide-in basics-from-left">
       <div class="item1IndexBasics">
-        <a href=""><img class="imgBasics" src="images/gardeingwater.png" alt="water"></a>
+        <a href="basics/water.html"><img class="imgBasics" src="images/gardeingwater.png" alt="water"></a>
       </div>
       <div class="item2IndexBasics">
         <div class="titleIndexBasics">
@@ -161,7 +161,7 @@
 
     <div class="itemIndexBasics slide-in basics-from-left">
       <div class="item1IndexBasics" id="imgPaddingSoil">
-        <a href=""><img class="imgBasics" src="images/gardeningsoil.png" alt="soil"></a>
+        <a href="basics/soil.html"><img class="imgBasics" src="images/gardeningsoil.png" alt="soil"></a>
       </div>
       <div class="item2IndexBasics">
         <div class="titleIndexBasics">
@@ -176,7 +176,7 @@
 
     <div class="itemIndexBasics slide-in basics-from-left">
       <div class="item1IndexBasics">
-        <a href=""><img class="imgBasics" src="images/gardeningweather.png" alt="weather"></a>
+        <a href="basics/weather.html"><img class="imgBasics" src="images/gardeningweather.png" alt="weather"></a>
       </div>
       <div class="item2IndexBasics">
         <div class="titleIndexBasics">
@@ -205,13 +205,13 @@
       </div>
       <div class="itemIndexCategories">
         <p class="titleIndexCategory fade-in title-from-top">- Plants -</p>
-        <a href="" class="centerGrid">
+        <a href="plants/plants.html" class="centerGrid">
           <img class="imgCategories fade-in categories-from-bottom" src="images/flowerCategory2.jpg" alt="flower">
         </a>
       </div>
       <div class="itemIndexCategories">
         <p class="titleIndexCategory fade-in title-from-top">- Vegetables -</p>
-        <a href="" class="centerGrid">
+        <a href="vegetables/vegetables.html" class="centerGrid">
           <img class="imgCategories fade-in categories-from-bottom" src="images/vegetablesCategory2.jpeg" alt="vegetables">
         </a>
       </div>
