--- a/Gardenguru/plants/plants.html
+++ b/Gardenguru/plants/plants.html
@@ -17,7 +17,7 @@
     <header class="header">
       <ul class="headerlist">
         <li class="headerlogo">
-          <a href="index.html" class="active">
+          <a href="../index.html">
             <svg version="1.0" xmlns="http://www.w3.org/2000/svg"
              width="50" height="50" viewBox="0 0 200.000000 199.000000"
              preserveAspectRatio="xMidYMid meet">
@@ -77,17 +77,17 @@
         </li>
         <li class="headeritem">study
           <ul class="headerdropdown">
-            <li>learn</li>
-            <li>exercise</li>
-            <li>top</li>
+            <a href="../index.html#learnContainer" onclick="onLinkClick()"><li>learn</li></a>
+            <a href="../exercise.html"><li>exercise</li></a>
+            <a href="../top.html"><li>top</li></a>
           </ul>
         </li>
         <li class="headeritem">account
           <ul class="headerdropdown">
-            <a href="login.html"><li>login</li></a>
+            <a href="../login.html"><li>login</li></a>
           </ul>
         </li>
-        <a href="about.html"><li class="headeritem">about</li></a>
+        <a href="../about.html"><li class="headeritem">about</li></a>
       </ul>
     </header>
     
